--- a/skill.html
+++ b/skill.html
@@ -23,7 +23,7 @@ opening-animation
 <main class="container">
     <div class="opening">
         <span class="opening__mask"></span>
-        <img class="opening__logo" src="img/opening-logo4.png" alt="">
+        <img class="opening__logo" src="img/me.png" alt="">
     </div>
     <div class="mainVisual">
         <div id="container_mainVisual">
