--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ opening-animation
     <main class="container">
         <div class="opening">
             <span class="opening__mask"></span>
-            <img class="opening__logo" src="img/opening-logo3.png" alt="">
+            <img class="opening__logo" src="img/me.png" alt="">
         </div>
         <div class="mainVisual">
           <div id="container_mainVisual">
