--- a/about.html
+++ b/about.html
@@ -79,7 +79,9 @@ menu-content
 		</div>
 		<div class="contentHolder">
 			<h1>About</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<p>I want to create an environment where people can work happily with a smile on their face at all times. To achieve this, we want to be people who seek and keep moving on their own. I want to be a web designer, a photographer, and a person who connects people.<br>
+                <br>
+                いつでも笑顔で楽しく働ける環境をつくりたい。そのために、自ら求め、動き続ける人でありたい。私は、ウェブデザイナーであり、写真家であり、人と人をつなぐ人になりたいと考え動き続けています。</p>
 		</div>
 	</div>
 </div>
