--- a/skill.html
+++ b/skill.html
@@ -91,7 +91,7 @@ menu-content
 				<div class="col-7 col-sm-7  detail">
 					<h5>Level : Advanced</h5>
 					<span class="card-date">Adobe Photoshop</span>
-					<div class="info">Nunc vitae lectus lobortis, mollis mauris dignissim, viverra erat. Duis eget ornare tellus.Nunc vitae lectus lobortis, mollis mauris dignissim, viverra erat. Duis eget ornare tellus. </div>
+					<div class="info">I use it for all of my design and photo editing. It can be utilized on a professional level. </div>
 				</div>
 			</div>
 		</div>
@@ -103,7 +103,7 @@ menu-content
 				<div class=" col-7 col-sm-7  detail">
 					<h5>Level : Advanced</h5>
 					<span class="card-date">Adobe LightRoom</span>
-					<div class="info">Nunc vitae lectus lobortis, mollis mauris dignissim, viverra erat. Duis eget ornare tellus. </div>
+					<div class="info">I have been using it for many years as it is essential in editing photos. It can be utilized on a professional level. </div>
 				</div>
 			</div>
 		</div>
@@ -115,7 +115,7 @@ menu-content
 				<div class="col-7 col-sm-7  detail">
 					<h5>Level : Pre-intermediate</h5>
 					<span class="card-date">Adobe XD</span>
-					<div class="info">Nunc vitae lectus lobortis, mollis mauris dignissim, viverra erat. Duis eget ornare tellus. </div>
+					<div class="info">It is use to share images and create simple applications when creating web applications. </div>
 				</div>
 			</div>
 		</div>
@@ -127,7 +127,7 @@ menu-content
 				<div class=" col-7 col-sm-7  detail">
 					<h5>Level : Pre-intermediate</h5>
 					<span class="card-date">Figma</span>
-					<div class="info">Nunc vitae lectus lobortis, mollis mauris dignissim, viverra erat. Duis eget ornare tellus. </div>
+					<div class="info">I use it more frequently than Adobe XD and use it more to materialize my images. </div>
 				</div>
 			</div>
 		</div>
@@ -140,7 +140,7 @@ menu-content
 				<div class=" col-7 col-sm-7  detail">
 					<h5>Level : Upper-intermediate</h5>
 					<span class="card-date">HTML</span>
-					<div class="info">Nunc vitae lectus lobortis, mollis mauris dignissim, viverra erat. Duis eget ornare tellus. </div>
+					<div class="info">Like a tree diagram, class names and sections can be created in the mind and produced instantly. </div>
 				</div>
 			</div>
 		</div>
@@ -152,7 +152,7 @@ menu-content
 				<div class=" col-7 col-sm-7  detail">
 					<h5>Level : Upper-intermediate</h5>
 					<span class="card-date">CSS</span>
-					<div class="info">Nunc vitae lectus lobortis, mollis mauris dignissim, viverra erat. Duis eget ornare tellus. </div>
+					<div class="info">You can quickly answer the question without thinking about size and placement as well as motion. </div>
 				</div>
 			</div>
 		</div>
@@ -164,7 +164,7 @@ menu-content
 				<div class=" col-7 col-sm-7  detail">
 					<h5>Level : Upper-intermediate</h5>
 					<span class="card-date">SCSS</span>
-					<div class="info">Nunc vitae lectus lobortis, mollis mauris dignissim, viverra erat. Duis eget ornare tellus. </div>
+					<div class="info">I use SCSS more often because it saves me more time. </div>
 				</div>
 			</div>
 		</div>
@@ -176,7 +176,7 @@ menu-content
 				<div class="col-7 col-sm-7  detail">
 					<h5>Level : Intermediate</h5>
 					<span class="card-date">GSAP</span>
-					<div class="info">Nunc vitae lectus lobortis, mollis mauris dignissim, viverra erat. Duis eget ornare tellus. </div>
+					<div class="info">It is the most frequently used JS library. I use it because it allows me to write code in a short period of time. </div>
 				</div>
 			</div>
 		</div>
@@ -188,7 +188,7 @@ menu-content
 				<div class=" col-7 col-sm-7  detail">
 					<h5>Level : Intermediate</h5>
 					<span class="card-date">JavaScript</span>
-					<div class="info">Nunc vitae lectus lobortis, mollis mauris dignissim, viverra erat. Duis eget ornare tellus. </div>
+					<div class="info">I'm learning every day because it is essential to put movement into a website. </div>
 				</div>
 			</div>
 		</div>
@@ -200,7 +200,7 @@ menu-content
 				<div class=" col-7 col-sm-7  detail">
 					<h5>Level : Elementary</h5>
 					<span class="card-date">Adobe Illustrator</span>
-					<div class="info">Nunc vitae lectus lobortis, mollis mauris dignissim, viverra erat. Duis eget ornare tellus. </div>
+					<div class="info">I don't use Adobe Photoshop much because I use it a lot, but I can utilize it because I need it for design. </div>
 				</div>
 			</div>
 		</div>
@@ -212,7 +212,7 @@ menu-content
 				<div class="col-7 col-sm-7  detail">
 					<h5>Level : Advanced</h5>
 					<span class="card-date">Camera</span>
-					<div class="info">Nunc vitae lectus lobortis, mollis mauris dignissim, viverra erat. Duis eget ornare tellus. </div>
+					<div class="info">I have experience in a wide variety of photography, including shooting cafes and live performances. </div>
 				</div>
 			</div>
 		</div>
@@ -238,7 +238,7 @@ menu-content
 				<div class="col-7 col-sm-7  detail">
 					<h5>Level : Beginner</h5>
 					<span class="card-date">PHP</span>
-					<div class="info">Nunc vitae lectus lobortis, mollis mauris dignissim, viverra erat. Duis eget ornare tellus. </div>
+					<div class="info">It is not at a level where it can be utilized with just basic learning. However, I do understand how to write code, etc. </div>
 				</div>
 			</div>
 		</div>
@@ -250,7 +250,7 @@ menu-content
 				<div class=" col-7 col-sm-7  detail">
 					<h5>Level : Beginner</h5>
 					<span class="card-date">Python</span>
-					<div class="info">Nunc vitae lectus lobortis, mollis mauris dignissim, viverra erat. Duis eget ornare tellus. </div>
+					<div class="info">It is not at a level where it can be utilized with just basic learning. However, I do understand how to write code, etc. </div>
 				</div>
 			</div>
 		</div>
@@ -262,7 +262,7 @@ menu-content
 				<div class=" col-7 col-sm-7  detail">
 					<h5>Level : Beginner</h5>
 					<span class="card-date">Java Script</span>
-					<div class="info">Nunc vitae lectus lobortis, mollis mauris dignissim, viverra erat. Duis eget ornare tellus. </div>
+					<div class="info">The animation part can be described based on the library, but we feel that it still needs to be learned. </div>
 				</div>
 			</div>
 		</div>
@@ -274,7 +274,7 @@ menu-content
 				<div class="col-7 col-sm-7  detail">
 					<h5>Level : Beginner</h5>
 					<span class="card-date">Java</span>
-					<div class="info">Nunc vitae lectus lobortis, mollis mauris dignissim, viverra erat. Duis eget ornare tellus. </div>
+					<div class="info">It is not at a level where it can be utilized with just basic learning. However, I do understand how to write code, etc. </div>
 				</div>
 			</div>
 		</div>
@@ -286,7 +286,7 @@ menu-content
 				<div class=" col-7 col-sm-7  detail">
 					<h5>Level : Pre-intermediate</h5>
 					<span class="card-date">Shell Script</span>
-					<div class="info">Nunc vitae lectus lobortis, mollis mauris dignissim, viverra erat. Duis eget ornare tellus. </div>
+					<div class="info">This skill is often used in projects and can be entrusted with all code modification work. </div>
 				</div>
 			</div>
 		</div>
@@ -298,7 +298,7 @@ menu-content
 				<div class=" col-7 col-sm-7  detail">
 					<h5>Level : Pre-intermediate</h5>
 					<span class="card-date">Power Shell</span>
-					<div class="info">Nunc vitae lectus lobortis, mollis mauris dignissim, viverra erat. Duis eget ornare tellus. </div>
+					<div class="info">This skill is often used in projects and can be entrusted with all code modification work.. </div>
 				</div>
 			</div>
 		</div>
@@ -310,7 +310,7 @@ menu-content
 				<div class="col-7 col-sm-7  detail">
 					<h5>Level : Pre-intermediate</h5>
 					<span class="card-date">Jenkins</span>
-					<div class="info">Nunc vitae lectus lobortis, mollis mauris dignissim, viverra erat. Duis eget ornare tellus. </div>
+					<div class="info">Consistent handling from job creation to repository management is possible. </div>
 				</div>
 			</div>
 		</div>
@@ -322,7 +322,7 @@ menu-content
 				<div class=" col-7 col-sm-7  detail">
 					<h5>Level : Pre-intermediate</h5>
 					<span class="card-date">JQuery (JavaScript)</span>
-					<div class="info">Nunc vitae lectus lobortis, mollis mauris dignissim, viverra erat. Duis eget ornare tellus. </div>
+					<div class="info">It is used to include animation, but has not been utilized recently in terms of processing speed. </div>
 				</div>
 			</div>
 		</div>
@@ -334,7 +334,7 @@ menu-content
 				<div class=" col-7 col-sm-7  detail">
 					<h5>Level : Beginner</h5>
 					<span class="card-date">React.js </span>
-					<div class="info">Nunc vitae lectus lobortis, mollis mauris dignissim, viverra erat. Duis eget ornare tellus. </div>
+					<div class="info">A state of continued learning. I will continue to learn and be able to utilize this information on a professional level. </div>
 				</div>
 			</div>
 		</div>
