--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ loop-text
     </div>
 
     <div class="headline" >
-        Atsuya Osaki / Designer
+        Atsuya Osaki
     </div>
 
 <!-----------------------------------
@@ -118,13 +118,16 @@ scroll-sticky
     <script src="js/scroll-sticky.js"></script>
 
             <div class="container-thisisme">
-              <h2 class="title-thisisme js-slideIn"><span class="js-slideIn-element">I want to be </span></h2>
+              <h2 class="title-thisisme js-slideIn"><span class="js-slideIn-element">I want to be a</span></h2>
               <div class="cards">
                   <div class="card">
                       <h3 class="heading js-slideIn"><span class="js-slideIn-element">Designer</span></h3>
                       <p class="text-thisisme">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <br>
-                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        Among designers, I want to be a designer who places emphasis on communication. <br>I want to be a designer who can solve clients' problems with designs created through communication.
+                      </p>
+                      <br>
+                        <p class="text-thisisme">
+                        私はデザイナーの中でもコミュニケーションに重きを置くデザイナーになりたいと考えております。<br>コミュニケーションから生まれるデザインで、クライアントの課題を解決できるデザイナーになりたいです。 
                       </p>
                   </div>
       
@@ -132,8 +135,11 @@ scroll-sticky
                   <div class="card">
                       <h3 class="heading js-slideIn"><span class="js-slideIn-element">My future</span></h3>
                       <p class="text-thisisme">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <br>
-                         Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        As a designer, I want to not only solve problems for many clients, <br>but also create an environment where the people I work with enjoy their work and are happy to work with me. <br>To achieve this, I would like to work on improving my design skills first.
+                      </p>
+                      <br>
+                        <p class="text-thisisme">
+                         デザイナーとして多くのクライアントの課題を解決するだけでなく、<br>一緒に働いてくださる方が「仕事が楽しい」と思える瞬間や、一緒に働けてよかったと思っていただける環境を作っていきたいです。そのためにもまず、私のデザインスキルを高めることから取り組んでいきたいです。
                       </p>
                   </div>
               </div>
