--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ text-animation
         <p class="scroll-text wipeAnimation2">
           Webサイト作成に必要なスキルだけでなく、様々な経験をもとに多くのスキルを持っています。詳しくは"more..."をご確認ください。
         </p>
-        <a href="skill.html" class="btnarrow4"> more ... </a>
+        <a href="skill.html" class="btnarrow4"> more... </a>
         </div>
       </div>
     </div>
@@ -183,7 +183,7 @@ text-animation
         <p class="scroll-text wipeAnimation3">
           多くのことに挑戦しているので、同年代の中では秀でた引き出しを持っています。詳しくは"more..."をご確認ください。
         </p>
-        <a href="about.html" class="btnarrow4"> more ... </a>
+        <a href="about.html" class="btnarrow4"> more... </a>
       </div>
       </div>
   </div>
@@ -199,7 +199,7 @@ text-animation
         <p class="scroll-text wipeAnimation5">
           作品を掲載しております。 デザインが日課だからこそ撮れる写真があると自覚しています。 詳しくは"more..."をご確認ください。
         </p>
-        <a href="work.html" class="btnarrow4"> Photo more ... </a>
+        <a href="work.html" class="btnarrow4"> more... </a>
       </div>
       </div>
   </div>
